<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545"
    android:backgroundTint="#434343"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="273dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_removebg_preview__1_"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/mensagem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        android:text="@string/como_deseja_acessar_o_app"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button01"
        android:layout_width="217dp"
        android:layout_height="54dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="114dp"
        android:text="@string/restaurante"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensagem1" />

    <Button
        android:id="@+id/button02"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="160dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="#E81F1F"
        android:backgroundTint="#FFFFFF"
        android:text="@string/cliente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="68dp"
        android:layout_height="64dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/button01"
        app:layout_constraintTop_toBottomOf="@+id/mensagem1"
        app:srcCompat="@drawable/logopequeno"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="68dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="144dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button02"
        app:srcCompat="@drawable/logopequeno"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>